# tone3000-smart-tone-downloader

./: .gitignore  README.md  allah.py  package-lock.json  package.json
scripts/: run_smoke_tests.py  tauri_bridge.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: index.html  main.js  styles.css
