[package]
name = "tone3000_smart_tauri"
version = "0.2.1"
description = "Premium desktop UI for TONE3000 Smart Tone Downloader"
authors = ["er2g"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
